# rust-lambda-datafusion

./: Cargo.toml  README.md
src/: main.rs
